objects/Product_Add_On_Prerequisite__c.object
<CustomObject>
    <fields>
        <fullName>Prerequisite_Product_Id__c</fullName>
        <description>Product Id of the pre-requisite product</description>
        <label>Prerequisite Product Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Add_On_Prerequisite_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product Add On Prerequisite Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Add On Prerequisites</relationshipLabel>
        <relationshipName>Product_Add_On_Prerequisites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Add On Prerequisite</label>
    <nameField>
        <label>Product Add On Prerequisite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Add On Prerequisites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>